drivers/acpi/battery.c
@@ -937,10 +937,8 @@ static void acpi_battery_notify(acpi_handle handle, u32 event, void *data)
 	case ACPI_BATTERY_NOTIFY_INFO:
 	case ACPI_NOTIFY_BUS_CHECK:
 	case ACPI_NOTIFY_DEVICE_CHECK:
-		acpi_battery_mutex_lock(battery);
 		device = battery->device;
 		acpi_battery_notify_update(battery);
-		acpi_battery_mutex_unlock(battery);
 		acpi_bus_generate_event(device, event,
 					acpi_battery_present(battery));
 		break;
